# hullgap

./: .env.example  .gitignore  AGENTS.md  INSTALL.md  README.md  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  build_dataset.py  build_structure_classifier.py  cobi_test_combinations_100.csv  evaluate_cobi.py  evaluate_fesb_mnbi.py  evaluate_hard_rule.py  index.html  index.txt  pyproject.toml  requirements.txt  retrain_endothermic.py  retrain_gap_label.py  save_model.py  score_cobi_candidates.py  screen_candidates.py  train_classifier.py  validate_final_cosn_nipb.py  validate_nisb.py  validation_FeSb_MnBi.csv  validation_NiSb.csv  validation_NiSb_gap_label.csv
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
app/: crystal_viewer.py
convex_hull/: generate_structures.py  make_input.py  relax_mace.py
data/: mattersim_references.yaml
demo/: candidates_curated.csv  cif-index.json  systems.json
dft/: reference_energies.yaml
models/: feature_columns.json  stability_classifier.joblib  stability_classifier_endothermic.joblib  stability_classifier_gap_label.joblib  stability_classifier_structure_only.joblib  structure_only_classifier.joblib
notebooks/: 02_stoichiometry_sweep.ipynb  03_mlip_relaxation.ipynb  04_relaxation_visualization.ipynb  05_dft_validation.ipynb  06_chgnet_vs_mace.ipynb  06_high_pressure_verification.ipynb  07_mp_api_binary_survey.ipynb  08_mattergen_mattersim_hull.ipynb  09_mp_overlap_analysis.ipynb
outputs/: aflow_binary_entries.csv  cod_binary_entries.csv  grand_binary_survey.csv  jarvis_binary_entries.csv  mp_aflow_binary_survey.csv  mp_binary_entries.csv  mp_binary_stable.csv  mp_binary_survey.csv  nomad_binary_entries.csv
reports/: STABILITY_CLASSIFIER_SUMMARY.md  mace_shortlist_formation_energies.csv
scripts/: aflow_prototypes.py  backfill_relaxed_cifs.py  enrich_hull_csv.py  export_curated_demo_candidates.py  fetch_mp_cobi.py  generate_candidates.py  generate_cobi_dataset.py  generate_random_structures.py  mace_single_eval.py  make_qe_inputs.py  make_vasp_inputs.py  mattersim_from_extxyz.py  parse_dft_results.py  plot_void_scores.py  preprocess_candidates.py  query_systems.py  relax_batch.py  relax_mace_pressure.py  (+5 more)
(+4262 files in other folders)
