[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hullgap"
version = "0.1.0"
description = "HullGap: MLIP-guided crystal structure discovery MVP"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pymatgen>=2024.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "mp-api>=0.39",
]

[tool.setuptools.packages.find]
where = ["src"]
