[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hullgap"
version = "0.1.0"
description = "HullGap: MLIP-guided crystal structure discovery MVP"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "pymatgen>=2024.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "mp-api>=0.39",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "ase>=3.22",
    "chgnet>=0.3",
    "pyxtal>=0.6.7",
    "joblib>=1.3",
]

[project.optional-dependencies]
mace = [
    "mace-torch>=0.3",
]
matter = [
    "mattergen",
    "mattersim",
]
properties = [
    "phonopy>=2.20",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]
ui = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
all = [
    "hullgap[mace,matter,properties,notebook,ui]",
]

[project.urls]
Repository = "https://github.com/MTL-Hackathon/hullgap"

[tool.setuptools.packages.find]
where = ["src"]
